fixing overflow

--- a/scss/_projectsOverlay.scss
+++ b/scss/_projectsOverlay.scss
@@ -112,7 +112,7 @@
   padding: 1rem;
   width: 60%;
   min-height: 100%;
-  overflow-y: scroll;
+  overflow: scroll;
 
   p {
     margin-bottom: 0.5rem;
